--- a/ansible-apache/apache.yml
+++ b/ansible-apache/apache.yml
@@ -1,6 +1,9 @@
 ---
 - hosts: apache
-  sudo: yes
+  #sudo: yes
+  become: true
+  vars:
+    created_username: msis
   tasks:
     - name: install apache2
       apt: name=apache2 update_cache=yes state=latest
